// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"entreprise . chiffre d'affaires: 6044
impôt . montant: undefined
indépendant . cotisations et contributions: 1044
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 235
protection sociale . retraite . complémentaire: 24
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"entreprise . chiffre d'affaires: 27757
impôt . montant: undefined
indépendant . cotisations et contributions: 7757
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19435
protection sociale . retraite . base: 354
protection sociale . retraite . complémentaire: 116
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"entreprise . chiffre d'affaires: 67049
impôt . montant: undefined
indépendant . cotisations et contributions: 17049
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41403
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 289
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 2`] = `
"entreprise . chiffre d'affaires: 3240
impôt . montant: undefined
indépendant . cotisations et contributions: 1240
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
protection sociale . retraite . base: 59
protection sociale . retraite . complémentaire: 14
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 3`] = `
"entreprise . chiffre d'affaires: 6782
impôt . montant: undefined
indépendant . cotisations et contributions: 1782
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 59
protection sociale . retraite . complémentaire: 29
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 4`] = `
"entreprise . chiffre d'affaires: 13353
impôt . montant: undefined
indépendant . cotisations et contributions: 3353
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
protection sociale . retraite . base: 108
protection sociale . retraite . complémentaire: 55
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 5`] = `
"entreprise . chiffre d'affaires: 145882
impôt . montant: undefined
indépendant . cotisations et contributions: 45882
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73771
protection sociale . retraite . base: 355
protection sociale . retraite . complémentaire: 913
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 6`] = `
"entreprise . chiffre d'affaires: 1277645
impôt . montant: undefined
indépendant . cotisations et contributions: 277645
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528482
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 1770
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"entreprise . chiffre d'affaires: 87006
impôt . montant: undefined
indépendant . cotisations et contributions: 27006
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48274
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 448
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"entreprise . chiffre d'affaires: 70418
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 3`] = `
"entreprise . chiffre d'affaires: 55666
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"entreprise . chiffre d'affaires: 95134
impôt . montant: undefined
indépendant . cotisations et contributions: 35134
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48222
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 513
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"entreprise . chiffre d'affaires: 94085
impôt . montant: undefined
indépendant . cotisations et contributions: 34085
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48229
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 503
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"entreprise . chiffre d'affaires: 93554
impôt . montant: undefined
indépendant . cotisations et contributions: 33554
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48232
protection sociale . retraite . base: 463
protection sociale . retraite . complémentaire: 499
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"entreprise . chiffre d'affaires: 102164
impôt . montant: undefined
indépendant . cotisations et contributions: 42164
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48177
protection sociale . retraite . base: 349
protection sociale . retraite . complémentaire: 568
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"entreprise . chiffre d'affaires: 99247
impôt . montant: undefined
indépendant . cotisations et contributions: 39247
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48196
protection sociale . retraite . base: 541
protection sociale . retraite . complémentaire: 544
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"entreprise . chiffre d'affaires: 3068
impôt . montant: undefined
indépendant . cotisations et contributions: 2068
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
protection sociale . retraite . base: 79
protection sociale . retraite . complémentaire: 12
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"entreprise . chiffre d'affaires: 95134
impôt . montant: undefined
indépendant . cotisations et contributions: 35134
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48222
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 513
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"entreprise . chiffre d'affaires: 45030
impôt . montant: undefined
indépendant . cotisations et contributions: 5030
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: 34545
protection sociale . retraite . base: 507
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"entreprise . chiffre d'affaires: 1387
impôt . montant: undefined
indépendant . cotisations et contributions: 887
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"entreprise . chiffre d'affaires: 2018
impôt . montant: undefined
indépendant . cotisations et contributions: 1018
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 7
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"entreprise . chiffre d'affaires: 2649
impôt . montant: undefined
indépendant . cotisations et contributions: 1149
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"entreprise . chiffre d'affaires: 3274
impôt . montant: undefined
indépendant . cotisations et contributions: 1274
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 14
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"entreprise . chiffre d'affaires: 6816
impôt . montant: undefined
indépendant . cotisations et contributions: 1816
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 29
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"entreprise . chiffre d'affaires: 13291
impôt . montant: undefined
indépendant . cotisations et contributions: 3291
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
protection sociale . retraite . base: 72
protection sociale . retraite . complémentaire: 55
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"entreprise . chiffre d'affaires: 147615
impôt . montant: undefined
indépendant . cotisations et contributions: 47615
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73756
protection sociale . retraite . base: 351
protection sociale . retraite . complémentaire: 927
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"entreprise . chiffre d'affaires: 1282445
impôt . montant: undefined
indépendant . cotisations et contributions: 282445
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528413
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 1770
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;
